--- a/categories-style.css
+++ b/categories-style.css
@@ -34,6 +34,15 @@ nav{
     justify-content: center;    
 
 }
+footer{
+    display: flex;
+    text-align: center;
+    padding-top: 12px;
+    height: 50px;
+    /* background-color: rgb(24, 60, 51); */
+    /* color: white; */
+    width: 100%;
+}
 
 .box{
     display: inline-block;
